BIS-716: cosmetic changes to premise code